--- a/index.html
+++ b/index.html
@@ -1,18 +1,50 @@
 <!DOCTYPE html>
-<html lang="en" >
+<html lang="en">
 <head>
-  <meta charset="UTF-8">
-  <!--Samuel Thompson 7819013-->
-  <title>Upload_Test</title>
+    <meta charset="UTF-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+     <!-- Fonts-->
+     <link rel="stylesheet" href="https://use.typekit.net/ghc6kpn.css">
+     <link rel="stylesheet" href="https://use.typekit.net/srl6dvm.css">
+    <!--Samuel Thompson 7819013-->
+    <link rel="stylesheet" href="style.css">
+    <title>yoy Burrito Home Page</title>
 </head>
 <body>
-  <main>
-    <h1>Samuel Thompson</h1>
-    <p>"In many ways, the work of a critic is easy. We risk very little, yet enjoy a position over those who offer up their work and their selves to our judgment. We thrive on negative criticism, which is fun to write and to read. But the bitter truth we critics must face is that, in the grand scheme of things, the average piece of junk is probably more meaningful than our criticism designating it so."</p>
-    <p>-Anton Ego</p>
-  </main>
+<nav>
+  <ul>
+    <li><img src="Graphics/yoy_Burrito_logo.png" alt="logo" class="logo"></li>
+    <li><a href="index.html">Home</a></li>
+    <li><a href="gallery.html">Gallery</a></li>
+    <li><a href="menu.html">Menu</a></li>
+    <li><a href="#">Reviews</a></li>
+    <li><a href="#">Locations</a></li>
+  </ul>
+</nav>
+<header>
+</header>
+<main>
+  <section class="Section_1">
+    <h2>About Us</h2>
+    <p>We are a family owned and operated Hispanic food truck bringing classic Hispanic cuisine to the streets of Japan. Through customer interaction and an active community, we hope to bring the food of our home to the nation and inspire a loving community with our home-cooked meals.</p>
+  </section>
+  <section class="Section_3">
+    <img src="Graphics/People_enjoying_food.png" alt="salsa">
+  </section>
+  <section class="Nutrition">
+    <ul>
+      <li><span><a href="https://twitter.com" target="_blank"><img src="Graphics/social_media_icons/twitter_icon.png" alt="twitter"></a></span></li>
+      <li><span><a href="https://facebook.com" target="_blank"><img src="Graphics/social_media_icons/facebook_icon.png" alt="facebook"></a></span></li>
+      <li><span><a href="https://instagram.com" target="_blank"><img src="Graphics/social_media_icons/Instagram_icon.png" alt="instagram"></a></span></li>
+      <li><span><a href="https://linkedin.com" target="_blank"><img src="Graphics/social_media_icons/linkedIn_icon.png" alt="linkdin"></a></span></li>
+    </ul>
+  </section>
+  <section class="Section_4">
+    <img src="Graphics/Advertisement.png" alt="bobblehead">
+  </section>
+</main>
 <footer>
-  <p>Samuel Thompson | 2024</p>
+  <p>Designed by: Samuel Thompson | Copyright © yoy Burrito 2025 | IMED-1316: Instructor Juan Primo</p>
 </footer>
 </body>
 </html>
